# Sony-Digital-Paper-Web-GUI

./: .gitignore  README.md  app.py  pyproject.toml
static/: app.js  index.html  style.css
