[project]
name = "sony-paper-gui"
version = "0.1.0"
description = "A fun, sassy web-based file manager for Sony Digital Paper devices"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flask>=3.0.0",
    "flask-cors>=4.0.0",
    "dpt-rp1-py>=0.1.16",
]

[project.scripts]
sony-paper-gui = "app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = ["app.py", "static"]

[tool.uv]
dev-dependencies = []
